--- a/orocrm-http/Dockerfile
+++ b/orocrm-http/Dockerfile
@@ -5,7 +5,7 @@ MAINTAINER Sergey Cherepanov <scherepanov@magecore.com>
 COPY bin/* /opt/bin/
 COPY data/* /tmp/
 
-RUN chmod +x /opt/bin/install.sh && /opt/bin/install.sh && rm -rf /opt/bin
+RUN chmod +x /opt/bin/install.sh && sleep 1 && /opt/bin/install.sh && rm -rf /opt/bin
 
 EXPOSE 80
 
