--- a/orocrm-base/Dockerfile
+++ b/orocrm-base/Dockerfile
@@ -1,6 +1,8 @@
 FROM oro/crm-debian-root
 MAINTAINER Sergey Cherepanov <scherepanov@magecore.com>
 
+ENV DEBIAN_FRONTEND noninteractive
+
 COPY bin/* /opt/bin/
 COPY data/* /tmp/
 
