--- a/orocrm-http/Dockerfile
+++ b/orocrm-http/Dockerfile
@@ -1,6 +1,7 @@
 FROM oro/crm-debian-base
 MAINTAINER Sergey Cherepanov <scherepanov@magecore.com>
 
+ENV DEBIAN_FRONTEND noninteractive
 
 COPY bin/* /opt/bin/
 COPY data/* /tmp/
