--- a/orocrm-root/Dockerfile
+++ b/orocrm-root/Dockerfile
@@ -1,5 +1,7 @@
 FROM debian:7.8
 MAINTAINER Sergey Cherepanov <scherepanov@magecore.com>
 
+ENV DEBIAN_FRONTEND noninteractive
+
 COPY bin/* /opt/bin/
 RUN chmod +x /opt/bin/install.sh && sleep 1 && /opt/bin/install.sh && rm -rf /opt/bin
