--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,22 @@ http:
     OROCRM_HOSTNAME: localhost
     OROCRM_WEBSOCKET_HOST: localhost
     OROCRM_WEBSOCKET_PORT: 8080
+websocket:
+  image: oro/crm-debian-websocket
+  links:
+    - db
+  ports:
+    - 8080
+  environment:
+    OROCRM_DB_HOST: db
+    OROCRM_DB_PORT: 3306
+    OROCRM_DB_USER: orocrm
+    OROCRM_DB_PASSWORD: orocrm
+    OROCRM_DB_NAME: orocrm
+    OROCRM_DB_HOST: db
+    OROCRM_HOSTNAME: localhost
+    OROCRM_WEBSOCKET_HOST: 0.0.0.0
+    OROCRM_WEBSOCKET_PORT: 8080
 db:
   image: mysql
   expose:
